# server/src/routes/reservations.route.ts
@@ -2,7 +2,7 @@ import { Router } from 'express';
 import { ReservationController } from '@/controllers/reservations.controller';
 import { Routes } from '@interfaces/routes.interface';
 import { validate } from '@middlewares/validate';
-import { ReservationSchema } from '@models/reservations.model';
+import { ReservationSchema, getMonthlyReservationsSchema } from '@models/reservations.model';
 
 export class ReservationIRoute implements Routes {
   public path = '/reservations';
@@ -17,5 +17,10 @@ export class ReservationIRoute implements Routes {
     this.router.get(`${this.path}`, this.reservation.getReservations);
     this.router.post(`${this.path}`, validate(ReservationSchema), this.reservation.createReservation);
     this.router.delete(`${this.path}/:id`, this.reservation.cancelReservation);
+    this.router.get(
+      `${this.path}/calendar/:month/:year`,
+      validate(getMonthlyReservationsSchema, 'params'),
+      this.reservation.getMonthlyReservationsController,
+    );
   }
 }
