# server/swagger.yaml
@@ -258,6 +258,29 @@ paths:
           description: 'Not Found'
         500:
           description: 'Server Error'
+  /reservations/calendar/{month}/{year}:
+    get:
+      tags:
+        - reservations
+      summary: Get monthly reservations
+      parameters:
+        - name: month
+          in: path
+          description: 'Month'
+          required: true
+          type: integer
+        - name: year
+          in: path
+          description: 'Year'
+          required: true
+          type: integer
+      responses:
+        200:
+          description: 'OK'
+        400:
+          description: 'Bad Request'
+        500:
+          description: 'Server Error'
 
 # definitions
 definitions:
